remove loading icon

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,7 +38,7 @@
         <div id=loadingScreen>
             <section>
                 <b><span class='text' txt="noteAppName">Notas</span></b>
-                <div><img src="img/load.svg" id="loadingIcon"></div>
+                <h2 class="text" txt="loading">Loading the load screen...</div>
             </section>
         </div>
 
