--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -20,8 +20,7 @@
     <body>
         <article>
             <h1 class="text" txt="createAccount">Crear cuenta</h1>
-            <div id="loadIcon"><img src="img/load.svg" id="loadingIcon"></div>
-            <div id="text" class="text" txt="loading"></div>
+            <div id="text" class="text" txt="loading">Loading...</div>
             <div id="tinyText" hidden></div>
             <div><input id="inputField" type="text" placeholder="..." hidden></div>
             <div><button id="nextButton" class="text" txt="next" hidden>Siguiente</button></div>
