--- a/frontend/manageAccount.html
+++ b/frontend/manageAccount.html
@@ -19,6 +19,7 @@
         <script defer src="js/manageAccount/changeDataMenu.js"></script>
         <script defer src="js/manageAccount/changeLanguage.js"></script>
         <script defer src="js/manageAccount/logOutInAllDevices.js"></script>
+        <script defer src="js/manageAccount/deleteAccoutMenu.js"></script>
     </head>
     <body>
         <div id=loadingScreen>
@@ -27,7 +28,7 @@
                 <h2 class="text" txt="loading">Loading the load screen...</h2>
             </section>
         </div>
-        
+
         <div id='mainScreen' hidden>
             <div id='mainScreenNotesBigName'>
                 <b class="text" txt="noteAppName">Notas</b>
@@ -57,8 +58,7 @@
                         </section>
                         <section>
                             <button class='greenButton text' id="logOutInAllMenuButton" txt="logOutInAll">Cerrar sesión en todos los dispositivos</button>
-                            <button class='greenButton text' txt="deleteAllNotes">Borrar todas las notas</button>
-                            <button class='greenButton text' txt="deleteAccount">Eliminar cuenta</button>
+                            <button class='greenButton text' id="deleteAccountMenuButton" txt="deleteAccount">Eliminar cuenta</button>
                         </section>
                         <section>
                             <button class='greenButton text' id="goBackToNotes" txt="back">Volver</button>
@@ -129,6 +129,40 @@
                         </section>
                         <section>
                             <button class="greenButton text" id="logOutInAllCancelButton" txt="cancel">Cancelar</button>
+                        </section>
+                    </p>
+                </div>
+
+                <div id="deleteAccountMenu" hidden>
+                    <h1>Borrar cuenta</h1>
+                    <p>
+                        <section>
+                            <h2>¿Quieres borrar tu cuenta?</h2>
+                            <p>
+                                Al borrar tu cuenta se borrarán todas tus notas y ya no podrás acceder a ellas de forma online.
+                            </p>
+                            <p>
+                                Todos los dispositivos en los que hayas iniciado sesión seguirán teniendo copias de las notas que hayas editado en ese dispositivo y pueden ser vistas en el modo local. De igual forma es recomendable descargar las notas que desee conservar.
+                            </p>
+                            <button class="greenButton" id="deleteAccountButton">Borrar la cuenta accountname</button>
+                        </section>
+                        <section>
+                            <button class="greenButton text" id="goBackDeleteAccountMenu" txt="cancel">Cancelar</button>
+                        </section>
+                    </p>
+                </div>
+
+                <div id="deleteAccountEmailCodeMenu" hidden>
+                    <h1 class="text" txt="checkYourEmail">Revisa tu correo</h1>
+                    <p>
+                        <section>
+                            <span>Para confirmar el cierre de tu cuenta, ingresa el código que enviamos al correo electrónico </span>
+                            <b><span id="deleteAccountEmailSent">someone@email.com</span></b>
+                        </section>
+                        <section>
+                            <h2 class="text" txt="enterTheCode">Ingresa el código</h2>
+                            <p><input type="text" id="deleteAccountCodeInput" placeholder="A1B2C" maxlength="5"></p>
+                            <button class="greenButton text" id="confirmDeleteAccount" txt="verify">Comprobar</button>
                         </section>
                     </p>
                 </div>
