--- a/frontend/manageAccount.html
+++ b/frontend/manageAccount.html
@@ -62,7 +62,7 @@
                             <button class='greenButton text' id="deleteAccountMenuButton" txt="deleteAccount">Eliminar cuenta</button>
                         </section>
                         <section>
-                            <button class='greenButton text' id="goBackToNotes" txt="back">Volver</button>
+                            <button class='greenButton text' id="goBackToNotes" txt="saveAndExit">Volver</button>
                         </section>
                     </p>
                 </div>
