floating window parece funcionar, ahora falta adaptar todo el código

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -129,8 +129,8 @@
             </div>
         </div>
 
-        <div id='floatingWindow' hidden>
-            <div id='window'>
+        <div id='floatWindow' hidden>
+            <div id='window' class="open">
                 <h1 id='windowTitle'></h1>
                 <div id='windowText'></div>
                 <div id='windowInput'>
