manageAccount ahora funciona (y tenía un bug)

--- a/frontend/manageAccount.html
+++ b/frontend/manageAccount.html
@@ -200,7 +200,7 @@
             </div>
         </div>
 
-        <div id='floatingWindow' hidden>
+        <div id='floatWindow' hidden>
             <div id='window'>
                 <h1 id='windowTitle'></h1>
                 <div id='windowText'></div>
