animaciones en manageAccount

--- a/frontend/manageAccount.html
+++ b/frontend/manageAccount.html
@@ -35,7 +35,7 @@
                 <b class="text" txt="noteAppName">Notas</b>
             </div>
             <div class="container">
-                <div id="mainMenu" hidden>
+                <div id="mainMenu" class="openMenu" hidden>
                     <h1 class="text" txt="manageAccount">Gestionar cuenta</h1>
                     <p>
                         <section>
