--- a/frontend/index.html
+++ b/frontend/index.html
@@ -146,7 +146,7 @@
                     <button id='closeMenuButton'>
                         <span class="text" txt="close">Cerrar</span>
                     </button>
-                    <span id='menuTitleText'>Modo local</span>
+                    <div id='menuTitleText'>Modo local</div>
                 </h1>
                 <section id='menuButtons'>
                     <article>
