me olvidé del frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,11 +16,13 @@
         <link rel='stylesheet' type='text/css' href='css/floatingWindow.css'>
         <link rel="shorcut icon" type="image/svg" href="img/favicon.svg">
 
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.js"> </script>
         <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
         <script defer src='js/const.js'></script>
         <script defer src='js/hash.js'></script>
         <script defer src='js/localStorage.js'></script>
+        <script defer src='js/crypto.js'></script>
         <script defer src='js/language.js'></script>
         <script defer src='js/resize.js'></script>
         <script defer src='js/floatingWindow.js'></script>
