--- a/frontend/index.html
+++ b/frontend/index.html
@@ -89,9 +89,7 @@
         <div id='noteScreen' hidden>
             <nav>
                 <b><span class="text" txt="noteAppName">Notas</span></b>
-                <button id='menuButton' class="text" txt="localMode">
-                    <span class="text" txt="localMode">Modo local</span>
-                </button>
+                <button id='menuButton' class="text" txt="localMode"></button>
             </nav>
             <div id='allContainer'>
                 <aside id='leftBar'>
