intentando hacer que funcione manageAccount pero me encontré un problema

--- a/frontend/manageAccount.html
+++ b/frontend/manageAccount.html
@@ -19,6 +19,8 @@
         <script defer src="js/cookies.js"></script>
         <script defer src="js/floatingWindow.js"></script>
         <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.js"> </script>
+        <script defer src="js/crypto.js"></script>
         <script defer src="js/manageAccount/manageAccount.js"></script>
         <script defer src="js/manageAccount/changeDataMenu.js"></script>
         <script defer src="js/manageAccount/changeLanguage.js"></script>
@@ -30,7 +32,7 @@
         <div id=loadingScreen>
             <section>
                 <b><span class='text' txt="noteAppName">Notas</span></b>
-                <h2 class="text" txt="loading">Loading the load screen...</h2>
+                <h2 class="text" txt="loading">Loading this text</h2>
             </section>
         </div>
 
