--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,8 +9,10 @@
 
         <!--Cargar los css dependiendo de si está en modo oscuro o no-->
         <script>
-            let darkModeActive = true;
-            loadDarkCss(darkModeActive);
+            let colorTheme = localStorage.getItem('_theme');
+            if(colorTheme === 'dark') loadDarkCss(true);
+            else loadDarkCss(false);
+
             function loadDarkCss(dark)
             {
                 if(dark) document.write(`<link rel='stylesheet type='text/css' href='css/style-dark.css'>`);
