--- a/frontend/createAccount.html
+++ b/frontend/createAccount.html
@@ -34,6 +34,7 @@
         <script defer src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.js"> </script>
         <script defer src="js/crypto.js"></script>
         <script defer src="js/createAccount/fieldsAreValid.js"></script>
+        <script defer src="js/createAccount/emailCode.js"></script>
         <script defer src="js/createAccount/main.js"></script>
     </head>
     <body>
