--- a/frontend/manageAccount.html
+++ b/frontend/manageAccount.html
@@ -27,6 +27,7 @@
 
         <script>let titleTextIDLang = 'manageAccountNotes';</script>
         <script defer src="js/hash.js"></script>
+        <script defer src="js/localStorage.js"></script>
         <script defer src="js/language.js"></script>
         <script defer src="js/cookies.js"></script>
         <script defer src="js/floatingWindow.js"></script>
