--- a/frontend/createAccount.html
+++ b/frontend/createAccount.html
@@ -46,7 +46,7 @@
             </section>
         </div>
 
-        <div id='mainScreen'>
+        <div id='mainScreen' hidden>
             <div id='mainScreenNotesBigName'>
                 <b class="text" txt="noteAppName">Notas</b>
             </div>
