continuando con crear cuenta

--- a/frontend/createAccount.html
+++ b/frontend/createAccount.html
@@ -56,17 +56,17 @@
                     <p>
                         <section>
                             <h2>Nombre de usuario</h2>
-                            <p id="usernameText"></p>
+                            <b><p id="usernameText"></p></b>
                             <input type="text" id="usernameField" placeholder="Adam Smith">
                         </section>
                         <section>
                             <h2>Correo electrónico</h2>
-                            <p id="emailText"></p>
+                            <b><p id="emailText"></p></b>
                             <input type="text" id="emailField" placeholder="someone@example.com">
                         </section>
                         <section>
                             <h2>Contraseña</h2>
-                            <p id="passwordText"></p>
+                            <b><p id="passwordText"></p></b>
                             <input type="password" id="passwordField" placeholder="a strong password">
                             <input type="password" id="comprobePasswordField" placeholder="type it again">
                         </section>
