--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,7 +60,7 @@
             <div id='loginScreenBigName'>
                 <b><span class="text" txt="noteAppName"></span></b>
             </div>
-            <img id="loginSettings" src="img/settings-dark.png">
+            <img id="loginSettings" src="img/settings.png">
             <div>
                 <h1><span class="text" txt="login"></span></h1>
                 <section id="usernameLoginSection">
@@ -161,9 +161,7 @@
                 </h1>
                 <section id='menuButtons'>
                     <article><button id='menuExitLocalMode' class="text" txt="menu_exitLocalMode"></button></article>
-                    <article><button id='menuSettingsLocal'>Preferencias</button></article>
-                    <!--article><button id='menuChangeLanguage' class="text" txt="changeLanguage2"></button></article-->
-                    <!--article><button id='menuEraseAll' class="text" txt="menu_eraseAll"></button></article-->
+                    <article><button id='menuSettingsLocal' class="text" txt="preferences"></button></article>
                     <article><button id='menuOnlineLogOut' class="text" txt="logOut"></button></article>
                     <article><button id='menuOnlineManageAccount' class="text" txt="manageAccount"></button></article>
                     <article><button id='menuOnlineChangeToLocal' class="text" txt="menu_localNotes"></button></article>
